--- a/package.json
+++ b/package.json
@@ -43,13 +43,16 @@
     "@types/prismjs": "1.9.0",
     "angular-calendar": "0.23.3",
     "angular-in-memory-web-api": "0.5.3",
+    "body-parser": "1.18.2",
     "chart.js": "2.7.1",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.3",
     "d3": "4.13.0",
+    "express": "4.16.3",
     "hammerjs": "2.0.8",
     "intl": "1.2.5",
     "moment": "2.20.1",
+    "mongoose": "5.0.14",
     "ng2-charts": "1.6.0",
     "ngrx-store-freeze": "0.2.1",
     "ngx-color-picker": "5.3.1",
@@ -57,6 +60,7 @@
     "perfect-scrollbar": "1.3.0",
     "prismjs": "1.11.0",
     "rxjs": "5.5.6",
+    "save": "2.3.2",
     "web-animations-js": "2.3.1",
     "zone.js": "0.8.20"
   },
