--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/prismjs": "1.9.0",
     "angular-calendar": "0.23.3",
     "angular-in-memory-web-api": "0.5.3",
+    "angular5-social-login": "1.0.9",
     "body-parser": "1.18.2",
     "chart.js": "2.7.1",
     "classlist.js": "1.1.20150312",
